# cpp_homework

task1/: main.c  multi
task2/: main.c
task3/: CMakeLists.txt  rational.cpp  rational.h
task6/: CMakeLists.txt  lazy_string.cpp  lazy_string.h
task7/: CMakeLists.txt  lazy_string.cpp
